--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 p {
-    color: blueviolet;
-    font-size: 30px;
+    color: rgb(157, 62, 245);
+    font-size: 15px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
 
 }
 h1 {
-    color: black;
+    color: rgb(36, 41, 36);
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 100px;
