поковырял цвета, ничего особенного

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 p {
-    color: rgb(162, 81, 238);
+    color:#a255cf;
     font-size: 15px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
 
 }
 h1 {
-    color: rgb(56, 61, 56);
+    color:##363d3a;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 100px;
