--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ p {
 
 }
 h1 {
-    color:##363d3a;
+    color:#363d3a;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 100px;
