ссылки меняют цвет при наведении

--- a/style.css
+++ b/style.css
@@ -11,3 +11,16 @@ h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 100px;
 }
+h4 {
+    color: #334d5c;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+
+}
+a {
+    color:#8a61a5;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: unset;
+}
+a:hover {
+    color: black;
+}
